[package]
name = "teletrack-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = "2.7.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures = "0.3.12"
actix-cors = "0.7.1"
