[package]
name = "teletrack-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"                                     # web server service
mongodb = "2.7.1"                                   # database api
reqwest = { version = "0.11", features = ["json"] } # web requests client
serde = { version = "1.0", features = ["derive"] }  # json stuff
dotenv = "0.15"                                     # environment parameters
serde_json = "1.0"                                  # more json stuff
futures = "0.3.12"                                  # features
actix-cors = "0.7.1"                                # ofCORS
teloxide = "0.12"                                   # Telegram Bot API
urlencoding = "2.1"                                 # For URL-safe parameters
chrono = "0.4"                                      # Timestamps
thiserror = "2.0.12"                                # TODO: switch everything to anyhow
base64 = "0.22.1"                                   # bypassing telegram limitations on parameters B)
anyhow = "1.0.97"                                   # eroor
bytes = "1.10.1"
